docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/snackbar.mdx
---
title: Snackbar
description: A brief notification that appears at the bottom of the screen to provide feedback without interrupting the user.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI exposes two components that mirror Jetpack Compose's [Snackbar](https://developer.android.com/develop/ui/compose/components/snackbar) APIs:

- [`SnackbarHost`](#snackbarhost) wraps Compose's [SnackbarHost](https://developer.android.com/reference/kotlin/androidx/compose/material3/SnackbarHost.composable) and [SnackbarHostState](https://developer.android.com/reference/kotlin/androidx/compose/material3/SnackbarHostState). Place it once in your layout, then call `showSnackbar` on the `ref`. Snackbars auto-dismiss based on `duration` and can also be dismissed via the action button or the optional close icon.
- [`Snackbar`](#snackbar) is a styling-only child of [`SnackbarHost`](#snackbarhost). Pass one to override colors or place the action on a new line.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/snackbar/android-light.webp"
  darkSrc="/static/images/expo-ui/snackbar/android-dark.webp"
  alt="Material 3 snackbar showing the message 'Item archived' with an Undo action"
/>

## Installation

<APIInstallSection />

## Usage

### Showing a snackbar

Place a [`SnackbarHost`](#snackbarhost) once in your layout and call `showSnackbar` on its ref to display a message. The returned promise resolves with `'actionPerformed'` or `'dismissed'` once the snackbar goes away.

<ComponentExample
  title="SnackbarExample.tsx"
  src="/static/images/expo-ui/examples/snackbar-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/snackbar-basic-android-dark.webp"
  alt="A Material 3 snackbar at the bottom of the screen reading 'Item archived' with an Undo action">

```tsx
import { useRef } from 'react';
import {
  Box,
  Button,
  Column,
  Host,
  SnackbarHost,
  Text,
  type SnackbarHostRef,
} from '@expo/ui/jetpack-compose';
import {
  align,
  fillMaxSize,
  fillMaxWidth,
  padding,
} from '@expo/ui/jetpack-compose/modifiers';

export default function SnackbarExample() {
  const hostRef = useRef<SnackbarHostRef>(null);

  const onArchive = async () => {
    const result = await hostRef.current?.showSnackbar({
      message: 'Item archived',
      actionLabel: 'Undo',
      duration: 'short',
    });
    if (result === 'actionPerformed') {
      // The user tapped Undo, restore the item.
    }
  };

  return (
    <Host style={{ flex: 1 }}>
      <Box modifiers={[fillMaxSize()]}>
        <Column modifiers={[padding(16, 16, 16, 16)]}>
          <Button onClick={onArchive}>
            <Text>Archive</Text>
          </Button>
        </Column>

        <Box modifiers={[align('bottomCenter'), fillMaxWidth()]}>
          <SnackbarHost ref={hostRef} />
        </Box>
      </Box>
    </Host>
  );
}
```

</ComponentExample>

### Custom styling

Pass a [`Snackbar`](#snackbar) child to [`SnackbarHost`](#snackbarhost) to override colors or place the action on a new line. The [`Snackbar`](#snackbar) itself takes no content, the message and action come from each `showSnackbar` call.

<ComponentExample
  title="StyledSnackbar.tsx"
  src="/static/images/expo-ui/examples/snackbar-styled-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/snackbar-styled-android-dark.webp"
  alt="A snackbar with a dark navy container, light lavender message reading 'Saved', an Undo action, and a close icon">

```tsx
import { useRef } from 'react';
import {
  Box,
  Button,
  Column,
  Host,
  Snackbar,
  SnackbarHost,
  Text,
  type SnackbarHostRef,
} from '@expo/ui/jetpack-compose';
import {
  align,
  fillMaxSize,
  fillMaxWidth,
  padding,
} from '@expo/ui/jetpack-compose/modifiers';

export default function StyledSnackbar() {
  const hostRef = useRef<SnackbarHostRef>(null);

  const onSave = () => {
    hostRef.current?.showSnackbar({
      message: 'Saved',
      actionLabel: 'Undo',
      withDismissAction: true,
    });
  };

  return (
    <Host style={{ flex: 1 }}>
      <Box modifiers={[fillMaxSize()]}>
        <Column modifiers={[padding(16, 16, 16, 16)]}>
          <Button onClick={onSave}>
            <Text>Save</Text>
          </Button>
        </Column>

        <Box modifiers={[align('bottomCenter'), fillMaxWidth()]}>
          <SnackbarHost ref={hostRef}>
            <Snackbar
              containerColor="#1E1E2E"
              contentColor="#CDD6F4"
              actionContentColor="#F38BA8"
              dismissActionContentColor="#CDD6F4"
            />
          </SnackbarHost>
        </Box>
      </Box>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Snackbar, SnackbarHost } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/snackbar"
  apiName="Snackbar"
/>
